deprecated method replace